[gd_scene load_steps=10 format=3 uid="uid://r0ln23k0c6w1"]

[ext_resource type="Script" path="res://props/box/Box.gd" id="1_8tw6c"]
[ext_resource type="PackedScene" uid="uid://dqx7jwtnnbmj4" path="res://interaction/Interactable.tscn" id="1_s241u"]

[sub_resource type="Animation" id="Animation_5nfd8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Root:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_kiav0"]
resource_name = "bounce"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Root:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 1, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_77i75"]
_data = {
"RESET": SubResource("Animation_5nfd8"),
"bounce": SubResource("Animation_kiav0")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k511c"]

[sub_resource type="BoxMesh" id="BoxMesh_ll87x"]
material = SubResource("StandardMaterial3D_k511c")

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_a5f64"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_dsovo"]

[node name="Box" type="Node3D"]
script = ExtResource("1_8tw6c")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_77i75")
}

[node name="Root" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Root"]
mesh = SubResource("BoxMesh_ll87x")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Root/MeshInstance3D"]
collision_layer = 3
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Root/MeshInstance3D/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_a5f64")

[node name="Interactable" parent="Root" instance=ExtResource("1_s241u")]

[node name="CollisionShape3D" parent="Root/Interactable" index="0"]
shape = SubResource("BoxShape3D_dsovo")

[connection signal="focused" from="Root/Interactable" to="." method="_on_interactable_focused"]
[connection signal="interacted" from="Root/Interactable" to="." method="_on_interactable_interacted"]
[connection signal="unfocused" from="Root/Interactable" to="." method="_on_interactable_unfocused"]

[editable path="Root/Interactable"]
